# datascout

./: .env.example  .gitignore  Dockerfile  README.md  croo-setup.js  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: DatasetCard.tsx  DownloadModal.tsx  Header.tsx  ScoreBreakdown.tsx  SearchBar.tsx
frontend/src/pages/: DatasetPage.tsx  HomePage.tsx  ResultsPage.tsx
frontend/src/utils/: html.ts
goals/: design.md  plan.md  plan_1.md  plan_10.md  plan_11.md  plan_12.md  plan_13.md  plan_14.md  plan_15.md  plan_16.md  plan_17.md  plan_18.md  plan_19.md  plan_2.md  plan_20.md  plan_3.md  plan_4.md  plan_5.md  plan_6.md  plan_7.md  plan_8.md  plan_9.md
src/: config.py  download.py  main.py
src/adapters/: __init__.py  arxiv.py  base.py  data_gov.py  fred.py  huggingface.py  kaggle.py  noaa.py  openaq.py  openml.py  worldbank.py  zenodo.py
src/cap/: __init__.py  clear.py  client.py  deliver.py  handler.py  negotiation.py  registration.py
src/engine/: __init__.py  dedup.py  license.py  orchestrator.py  profiler.py  ranking.py  score.py
src/groq/: client.py  parser.py  prompts.py
src/models/: __init__.py  cap.py  dataset.py  license.py  query.py  report.py  score.py
src/report/: __init__.py  citations.py  generator.py  manifest.py
tests/: test_adapters.py  test_adapters_all.py  test_adapters_extended.py  test_engines.py  test_groq_parser.py  test_orchestrator.py  test_report.py  test_score.py
