[project]
name = "datascout"
version = "0.1.0"
description = "Agent Pencari, Penilai, dan Penyaji Dataset Otomatis dari Banyak Sumber Terbuka"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.scripts]
datascout = "src.main:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
